--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         </div>
       </main>
     </div>
-    <script src="app.js" type="module"></script>
+    <script src="./js/app.js" type="module"></script>
   </body>
 </html>
