--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="./watchlist.html">My watchlist</a>
       </header>
       <main>
-        <div class="search-section">
+        <section class="search-section">
           <form action="" id="search-form">
             <div class="form-group">
               <input
@@ -30,14 +30,14 @@
               <button id="search-form__btn">Search</button>
             </div>
           </form>
-        </div>
-        <div class="movies-container">
+        </section>
+        <section class="movies-container">
           <div class="init-container">
             <img class="movie-icon" src="img/movie-icon.svg" alt="" />
           </div>
-        </div>
+        </section>
       </main>
     </div>
-    <script src="./js/app.js" type="module"></script>
+    <script src="./main.js" type="module"></script>
   </body>
 </html>
