--- a/watchlist.html
+++ b/watchlist.html
@@ -18,13 +18,13 @@
         <a href="./index.html">Search for movies</a>
       </header>
       <main>
-        <div class="movies-container">
+        <section class="movies-container">
           <div class="init-container">
             <img class="movie-icon" src="img/movie-icon.svg" alt="" />
           </div>
-        </div>
+        </section>
       </main>
     </div>
-    <script src="./js/app.js" type="module"></script>
+    <script src="./main.js" type="module"></script>
   </body>
 </html>
