Minor CSS/HTML adjustments

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </header>
       <main>
         <section class="search-section">
-          <form action="" id="search-form">
+          <form id="search-form" role="search">
             <div class="form-group">
               <input
                 type="text"
